<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Home.Ingredient.IngredientForm">

    <FrameLayout
        android:id="@+id/form_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/IngredientType"
                android:layout_width="0dp"
                android:layout_height="44dp"
                android:layout_marginTop="48dp"
                android:text="@string/ingredient_type"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/tick_button_ingredient"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginStart="44dp"
                android:text="tick"
                app:layout_constraintStart_toEndOf="@+id/IngredientType"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/back_button_ingredient"
                android:layout_width="0dp"
                android:layout_height="35dp"
                android:layout_marginBottom="8dp"
                android:text="back"
                app:layout_constraintBottom_toTopOf="@+id/IngredientType"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <Spinner
                android:id="@+id/IngredientType_input"
                android:layout_width="0dp"
                android:layout_height="38dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IngredientType" />

            <TextView
                android:id="@+id/IngredientName"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:text="@string/ingredient_name"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IngredientType_input" />

            <EditText
                android:id="@+id/IngredientName_input"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:layout_marginStart="8dp"
                android:inputType="textCapSentences"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IngredientName" />

            <TextView
                android:id="@+id/IngredientWeight"
                android:layout_width="0dp"
                android:layout_height="53dp"
                android:text="@string/ingredient_weight"
                android:textSize="20sp"
                android:textStyle="bold"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IngredientName_input" />

            <EditText
                android:id="@+id/IngredientWeight_input"
                android:layout_width="0dp"
                android:layout_height="46dp"
                android:layout_marginEnd="8dp"
                android:ems="10"
                android:inputType="number"
                android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IngredientWeight" />

            <TextView
                android:id="@+id/IngredientExpiry"
                android:layout_width="0dp"
                android:layout_height="51dp"
                android:text="@string/ingredient_expiry"
                android:textSize="20sp"
                android:layout_marginStart="8dp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IngredientWeight_input" />

            <EditText
                android:id="@+id/IngredientExpiry_input"
                android:layout_width="0dp"
                android:layout_height="48dp"
                android:ems="10"
                android:inputType="date"
                android:layout_marginStart="8dp"
                android:focusable="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/IngredientExpiry" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</LinearLayout>